<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <ImageView
        android:id="@+id/storyImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/story_image" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/storyUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/backButton"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/user_name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/storyDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/storyUsername"
        android:layout_toEndOf="@id/backButton"
        android:layout_marginStart="8dp"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/descriptionBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#80000000"
        android:padding="16dp">

        <TextView
            android:id="@+id/storyDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_story"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            android:gravity="center"/>
    </LinearLayout>

</RelativeLayout>
