<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="18dp"
    android:layout_marginVertical="9dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#f5f5f5">
        <ImageView
            android:id="@+id/storyImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:paddingBottom="12dp"
            android:contentDescription="@string/image_story"
            android:background="@drawable/ic_place_holder"
            android:transitionName="gambar"/>

        <TextView
            android:id="@+id/storyUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingHorizontal="16dp"
            android:text="@string/username" />

        <TextView
            android:id="@+id/storyDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingHorizontal="16dp"
            android:paddingBottom="12dp"
            android:textSize="14sp"
            android:text="@string/story_description" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
